[tool.poetry]
name = "crawling"
version = "0.1.0"
description = ""
authors = ["GeumBin <lgb9811@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.20"
google-api-python-client = "^2.97.0"
black = "^23.7.0"
isort = "^5.12.0"
bs4 = "^0.0.1"
selenium = "^4.11.2"
pandas = "^2.0.3"
numpy = "^1.25.2"
webdriver-manager = "^4.0.0"
tiktokapi = "^6.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
